--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Chocolate Store">
+    <meta name="author" content="Marlie Cross">
 
     <title>Marlie's Magic Morsels - Chocolates and More</title>
-
+	<link rel="icon" type="image/bmp" href="img/cupcakefavicon.bmp">
+	
+	<!-- leaflet-->
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/shop-homepage.css" rel="stylesheet">
 
-	<link href="lavish-bootstrap.css" rel="stylesheet">
+	<link href="css/lavish-bootstrap.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -70,9 +73,9 @@
             <div class="col-md-3">
                 <p class="lead">Marlie's Magic Morsels</p>
                 <div class="list-group">
-                    <a href="#" class="list-group-item">Category 1</a>
-                    <a href="#" class="list-group-item">Category 2</a>
-                    <a href="#" class="list-group-item">Category 3</a>
+                    <a href="#" class="list-group-item">Dark Chocolate Truffles</a>
+                    <a href="#" class="list-group-item">Specialty Truffles</a>
+                    <a href="#" class="list-group-item">Baked Chocolate</a>
                 </div>
             </div>
 
@@ -81,11 +84,11 @@
                 <div class="row carousel-holder">
 
                     <div class="col-md-12">
-                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                        <div id="carousel" class="carousel slide" data-ride="carousel">
                             <ol class="carousel-indicators">
-                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                                <li data-target="#carousel-item" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel-item" data-slide-to="1"></li>
+                                <li data-target="#carousel-item" data-slide-to="2"></li>
                             </ol>
                             <div class="carousel-inner">
                                 <div class="item active">
@@ -98,10 +101,10 @@
                                     <img class="slide-image" src="img/Double-Chocolate-Cookies.jpg" alt="Chocolate Cookies">
                                 </div>
                             </div>
-                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                            <a class="left carousel-control" href="#carousel" data-slide="prev">
                                 <span class="glyphicon glyphicon-chevron-left"></span>
                             </a>
-                            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                            <a class="right carousel-control" href="#carousel" data-slide="next">
                                 <span class="glyphicon glyphicon-chevron-right"></span>
                             </a>
                         </div>
@@ -222,10 +225,10 @@
                     </div>
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
-                        <h4><a href="#">Like this template?</a>
+                        <h4><a href="#">Want More Goodies?</a>
                         </h4>
-                        <p>If you like this template, then check out <a target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">this tutorial</a> on how to build a working review system for your online store!</p>
-                        <a class="btn btn-primary" target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">View Tutorial</a>
+                        <p>If you like our store, then check out <a target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">Marlie's Magic Blog</a> for delicious recipes and more!</p>
+                        <a class="btn btn-primary" target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">Go To Blog</a>
                     </div>
 
                 </div>
@@ -240,6 +243,11 @@
     <div class="container">
 
         <hr>
+		
+	      <div id="map">
+        <h2>Map</h2>
+        <div id="map-container"></div>
+      </div>
 
         <!-- Footer -->
         <footer>
@@ -254,10 +262,14 @@
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+   <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+	<!-- custom JavasScript -->
+	
+        <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+        <script src="js/main.js"></script>
 
 </body>
 
