saving progress images and modal

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="http://placehold.it/320x150" alt="">
+                            <img src="img/dark-chocolate-truffles.jpg" alt="Chocolate Truffle Box" height="150" width="320">
                             <div class="caption">
                                 <h4 class="pull-right">$24.99</h4>
                                 <h4><a href="#">Chocolate Truffles</a>
@@ -138,7 +138,7 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="http://placehold.it/320x150" alt="">
+                            <img src="img/coconut-truffles.jpg" alt="Coconut Truffle Box" height="150" width="320">
                             <div class="caption">
                                 <h4 class="pull-right">$18.99</h4>
                                 <h4><a href="#">Coconut Truffles</a>
@@ -160,7 +160,7 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="http://placehold.it/320x150" alt="">
+                            <img src="img/chocolate-cookies.jpg" alt="Chocolate Cookies" height="150" width="320">
                             <div class="caption">
                                 <h4 class="pull-right">$22.99</h4>
                                 <h4><a href="#">Double Chip Cookies</a>
@@ -182,7 +182,7 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="http://placehold.it/320x150" alt="">
+                            <img src="img/brownie-bites.jpg" alt="Brownie Bites" height="150" width="320">
                             <div class="caption">
                                 <h4 class="pull-right">$18.99</h4>
                                 <h4><a href="#">Brownie Bites</a>
@@ -204,7 +204,7 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="http://placehold.it/320x150" alt="">
+                            <img src="img/chocolate-turtles.png" alt="Chocolate Turtles" height="150" width="320">
                             <div class="caption">
                                 <h4 class="pull-right">$24.99</h4>
                                 <h4><a href="#">Chocolate Turtles</a>
@@ -259,6 +259,20 @@
         </footer>
 
     </div>
+	
+<!-- Trigger/Open The Modal -->
+<button id="myBtn">Open Modal</button>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+                    	
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">x</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
     <!-- /.container -->
 
     <!-- jQuery -->
