--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href="css/shop-homepage.css" rel="stylesheet">
 
 	<link href="css/lavish-bootstrap.css" rel="stylesheet">
+	<script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -50,13 +51,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="#About">About</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#Contact">Contact</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+						<a href="#"id="myBtn">Buy Now</a>
+                    </li>
+					   <li>
+                        <a href="http://www.wordpress.marliemagic.com">Visit Blog</a>
                     </li>
                 </ul>
             </div>
@@ -227,8 +231,8 @@
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <h4><a href="#">Want More Goodies?</a>
                         </h4>
-                        <p>If you like our store, then check out <a target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">Marlie's Magic Blog</a> for delicious recipes and more!</p>
-                        <a class="btn btn-primary" target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">Go To Blog</a>
+                        <p>If you like our store, then check out <a target="_blank" href="http://www.wordpress.marliemagic.com">Marlie's Magic Blog</a> for delicious recipes and more!</p>
+                        <a class="btn btn-primary" target="_blank" href="http://www.wordpress.marliemagic.com">Go To Blog</a>
                     </div>
 
                 </div>
@@ -248,6 +252,15 @@
         <h2>Map</h2>
         <div id="map-container"></div>
       </div>
+		
+		<div id="About">
+			<h2>About Us</h2>
+			<p>Content about us</p>
+		</div>
+				<div id="Contact">
+			<h2>Contact</h2>
+			<p>Contact Information</p>
+		</div>
 
         <!-- Footer -->
         <footer>
@@ -269,7 +282,150 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">x</span>
-    <p>Some text in the Modal..</p>
+    <fieldset>
+          <legend>Order Information</legend>
+		          <div class="form-group">
+            <label class="col-sm-3 control-label" for="comments">Goodies to Order</label>
+            <div class="col-sm-9">
+				<form action="">
+               <input type="radio" name="choice1" value="choice1"> Box of 12 Assorted Chocolate Truffles - $24.99<br>
+  				<input type="radio" name="choice2" value="choice2"> Box of 12 Coconut Truffles - $18.99<br>
+  				<input type="radio" name="choice3" value="choice3"> One Dozen Gift Wrapped Double Chip Cookies -$22.99<br>
+				<input type="radio" name="choice4" value="choice4"> Box of Two Dozen Brownie Bites - $18.99<br>
+  				<input type="radio" name="choice5" value="choice5"> Set of 9 Gift Wrapped Golden Chocolate Turles -$24.99<br>
+          		 </form>
+			</div>
+          </div>
+          <div class="form-group required">
+            <label class="col-sm-3 control-label" for="your-name"><span class="glyphicon glyphicon-question-sign" title="Your first and last name."></span> Your Name</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" name="your-name" id="your-name" placeholder="Your Name" required>
+            </div>
+          </div>
+          <div class="form-group required">
+            <label class="col-sm-3 control-label" for="your-address">Street Address</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" name="your-address" id="your-address" placeholder="Your Street Address" required>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label" for="your-address2">Street Address (additional)</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" name="your-address2" id="your-address2" placeholder="Your Street Address (additional)">
+            </div>
+          </div>
+          <div class="form-group required">
+            <label class="col-sm-3 control-label" for="your-city">City</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" name="your-city" id="your-city" placeholder="Your City" required>
+            </div>
+          </div>
+          <div class="form-group required">
+            <label class="col-sm-3 control-label" for="your-state"><span class="glyphicon glyphicon-question-sign" title="Two-letter state abbreviation."></span> State</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" name="your-state" id="your-state" placeholder="Your State" required>
+            </div>
+          </div>
+          <div class="form-group required">
+            <label class="col-sm-3 control-label" for="your-zip"><span class="glyphicon glyphicon-question-sign" title="US ZIP code only."></span> ZIP</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" name="your-zip" id="your-zip" placeholder="Your ZIP Code" required>
+            </div>
+          </div>
+        </fieldset>
+        <fieldset>
+          <legend>Payment</legend>
+          <div class="form-group required">
+            <label class="col-sm-3 control-label" for="card-holder-name"><span class="glyphicon glyphicon-question-sign" title="First and last name shown on card."></span> Name on Card</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" name="card-holder-name" id="card-holder-name" placeholder="Card Holder's Name" required>
+            </div>
+          </div>
+          <div class="form-group required">
+            <label class="col-sm-3 control-label" for="card-number"><span class="glyphicon glyphicon-question-sign" title="Do not use an actual card number."></span> Card Number</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" name="card-number" id="card-number" placeholder="Debit/Credit Card Number" required>
+            </div>
+          </div>
+          <div class="form-group required">
+            <label class="col-sm-3 control-label" for="expiry-month">Expiration Date</label>
+            <div class="col-sm-9">
+              <div class="row">
+                <div class="col-xs-3">
+                  <select class="form-control col-sm-2" name="expiry-month" id="expiry-month" required>
+                    <option>Month</option>
+                    <option value="01">Jan (01)</option>
+                    <option value="02">Feb (02)</option>
+                    <option value="03">Mar (03)</option>
+                    <option value="04">Apr (04)</option>
+                    <option value="05">May (05)</option>
+                    <option value="06">June (06)</option>
+                    <option value="07">July (07)</option>
+                    <option value="08">Aug (08)</option>
+                    <option value="09">Sep (09)</option>
+                    <option value="10">Oct (10)</option>
+                    <option value="11">Nov (11)</option>
+                    <option value="12">Dec (12)</option>
+                  </select>
+                </div>
+                <div class="col-xs-3">
+                  <select class="form-control" name="expiry-year" required>
+                    <option value="15">2015</option>
+                    <option value="16">2016</option>
+                    <option value="17">2017</option>
+                    <option value="18">2018</option>
+                    <option value="19">2019</option>
+                    <option value="20">2020</option>
+                    <option value="21">2021</option>
+                    <option value="22">2022</option>
+                    <option value="23">2023</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group required">
+            <label class="col-sm-3 control-label" for="cvv"><span class="glyphicon glyphicon-question-sign" title="Three-digit code from back of card."></span> Card CVV</label>
+            <div class="col-sm-3">
+              <input type="text" class="form-control" name="cvv" id="cvv" placeholder="Security Code" required>
+            </div>
+          </div>
+        </fieldset>
+        <fieldset>
+          <legend>Additional Information</legend>
+          <div class="form-group required">
+            <label class="col-sm-3 control-label" for="shipping-method">Shipping Method</label>
+            <div class="col-sm-9">
+              <div class="row">
+                <div class="col-xs-3">
+                  <select class="form-control col-sm-2" name="shipping-method" id="shipping-method" required>
+                    <option>Select One</option>
+                    <option value="Ground">UPS Ground</option>
+                    <option value="Air">UPS Air</option>
+                    <option value="Sea">USPS Boat</option>
+                    <option value="Rocket">USPS Jet</option>
+                    <option value="Pigeon">Pigeon Carrier</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label" for="comments">Special Instructions</label>
+            <div class="col-sm-9">
+              <textarea cols="80" rows="8" class="form-control" name="comments" id="comments" placeholder="Comments"></textarea>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-3 col-sm-9">
+              <button type="submit" class="btn btn-success"> <span class="glyphicon glyphicon-shopping-cart"></span> Check Out!</button>
+            </div>
+          </div>
+        </fieldset>
+      </form>
+    </div>
+    <div class="container">
+      <hr>
   </div>
 
 </div>
@@ -277,13 +433,20 @@
 
     <!-- jQuery -->
    <script src="js/jquery.js"></script>
+	 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 	<!-- custom JavasScript -->
 	
         <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+        <script src="js/vendor/jquery.validate.min.js"></script>
         <script src="js/main.js"></script>
+	
+	
+
+      
 
 </body>
 
