finished site details and links

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             <div class="col-md-3">
                 <p class="lead">Marlie's Magic Morsels</p>
                 <div class="list-group">
-                    <a href="#" class="list-group-item">Dark Chocolate Truffles</a>
-                    <a href="#" class="list-group-item">Specialty Truffles</a>
-                    <a href="#" class="list-group-item">Baked Chocolate</a>
+                    <a href="http://www.marthastewart.com/1098645/dark-chocolate-truffles" class="list-group-item">Dark Chocolate Truffles</a>
+                    <a href="http://www.bbcgoodfood.com/recipes/182606/chocolate-truffles" class="list-group-item">Specialty Truffles</a>
+                    <a href="https://en.wikipedia.org/wiki/Baking_chocolate" class="list-group-item">Baked Chocolate</a>
                 </div>
             </div>
 
@@ -255,11 +255,14 @@
 		
 		<div id="About">
 			<h2>About Us</h2>
-			<p>Content about us</p>
+			<p>Marlie's Magic Morsels was first established in February of 2016 by founder, Marlie Cross. Marlie loves chocolate and tasty treats and wanted to share her joy of chocolate crafting with the world. With 3 store front locations across the Seattle area, you can now buy Magic Morsels right in your neighborhood! Each order is made fresh and shipped out by our team of magic elves and baby ponies. They deliver right to your door within minutes of your order. So if you want to go beyond temping and dive into the magical taste sensation that is magic morsels, please order a box or stop by and see us around Seattle!</p>
 		</div>
 				<div id="Contact">
 			<h2>Contact</h2>
-			<p>Contact Information</p>
+					<p><b>Orders and Customer Service</b></p>
+					<p>Call: 1-800-555-YUMM <br> E-Mail: order-magic-chocolate-now@marliemagic.com</p>
+					<p><b>Employment</b></p>
+					<p>If you are a magic elf or baby pony with a can-do attitude who is willing to work for chocolate, please magically pop into any store and ask for Marlie.<br> She will be happy to speak with you directly about employement and opportunities for citizenship!</p>
 		</div>
 
         <!-- Footer -->
@@ -400,11 +403,11 @@
                 <div class="col-xs-3">
                   <select class="form-control col-sm-2" name="shipping-method" id="shipping-method" required>
                     <option>Select One</option>
-                    <option value="Ground">Ground</option>
-                    <option value="Air">Air</option>
-                    <option value="Sea">Sea</option>
-                    <option value="Rocket">Rocket</option>
-                    <option value="Pigeon">Pigeon</option>
+					 <option value="Rocket">1 Pony (may get lost) - FREE</option>
+                    <option value="Ground">1 Elf - $2.99</option>
+                    <option value="Air">1 Elf and 1 Baby Pony - $5.99</option>
+                    <option value="Sea">2 Baby Ponies - $8.99</option>
+                    <option value="Pigeon">Pigeon - $27.99</option>
                   </select>
                 </div>
               </div>
