--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<a href="#"id="myBtn">Buy Now</a>
                     </li>
 					   <li>
-                        <a href="http://www.wordpress.marliemagic.com">Visit Blog</a>
+                        <a target="_blank" href="http://www.wordpress.marliemagic.com">Visit Blog</a>
                     </li>
                 </ul>
             </div>
@@ -77,9 +77,9 @@
             <div class="col-md-3">
                 <p class="lead">Marlie's Magic Morsels</p>
                 <div class="list-group">
-                    <a href="http://www.marthastewart.com/1098645/dark-chocolate-truffles" class="list-group-item">Dark Chocolate Truffles</a>
-                    <a href="http://www.bbcgoodfood.com/recipes/182606/chocolate-truffles" class="list-group-item">Specialty Truffles</a>
-                    <a href="https://en.wikipedia.org/wiki/Baking_chocolate" class="list-group-item">Baked Chocolate</a>
+                    <a target="_blank" href="http://www.marthastewart.com/1098645/dark-chocolate-truffles" class="list-group-item">Dark Chocolate Truffles</a>
+                    <a target="_blank"href="http://www.bbcgoodfood.com/recipes/182606/chocolate-truffles" class="list-group-item">Specialty Truffles</a>
+                    <a target="_blank"href="https://en.wikipedia.org/wiki/Baking_chocolate" class="list-group-item">Baked Chocolate</a>
                 </div>
             </div>
 
@@ -277,7 +277,7 @@
     </div>
 	
 <!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
+<button id="myBtn"></button>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -403,7 +403,7 @@
                 <div class="col-xs-3">
                   <select class="form-control col-sm-2" name="shipping-method" id="shipping-method" required>
                     <option>Select One</option>
-					 <option value="Rocket">1 Pony (may get lost) - FREE</option>
+					 <option value="Rocket">1 Baby Pony (may get lost) - FREE</option>
                     <option value="Ground">1 Elf - $2.99</option>
                     <option value="Air">1 Elf and 1 Baby Pony - $5.99</option>
                     <option value="Sea">2 Baby Ponies - $8.99</option>
